--- a/app/src/main/res/values-v23/themes.xml
+++ b/app/src/main/res/values-v23/themes.xml
@@ -15,6 +15,7 @@
         <item name="snackbarTextViewStyle">@style/Theme.WarrantyRoster.Snackbar.TextView</item>
         <item name="snackbarButtonStyle">@style/Theme.WarrantyRoster.Snackbar.ActionButton</item>
         <item name="materialAlertDialogTheme">@style/Theme.WarrantyRoster.AlertDialog</item>
+        <item name="materialCalendarTheme">@style/Theme.WarrantyRoster.DatePicker</item>
     </style>
 
     <style name="Theme.WarrantyRoster.Landing" parent="Theme.WarrantyRoster">
