--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -14,6 +14,7 @@
         <item name="snackbarTextViewStyle">@style/Theme.WarrantyRoster.Snackbar.TextView</item>
         <item name="snackbarButtonStyle">@style/Theme.WarrantyRoster.Snackbar.ActionButton</item>
         <item name="materialAlertDialogTheme">@style/Theme.WarrantyRoster.AlertDialog</item>
+        <item name="materialCalendarTheme">@style/Theme.WarrantyRoster.DatePicker</item>
     </style>
 
     <style name="Theme.WarrantyRoster.Splash" parent="Theme.SplashScreen">
@@ -150,7 +151,7 @@
         <item name="android:padding">@dimen/padding_16dp</item>
     </style>
 
-    <style name="Theme.WarrantyRoster.Button.Appearance">
+    <style name="Theme.WarrantyRoster.Button.Appearance" parent="ShapeAppearance.MaterialComponents">
         <item name="cornerFamily">rounded</item>
         <item name="cornerSize">@dimen/radius_12dp</item>
     </style>
@@ -194,7 +195,7 @@
         <item name="android:paddingEnd">@dimen/padding_8dp</item>
     </style>
 
-    <style name="Theme.WarrantyRoster.TextButton.Appearance">
+    <style name="Theme.WarrantyRoster.TextButton.Appearance" parent="ShapeAppearance.MaterialComponents">
         <item name="cornerFamily">rounded</item>
         <item name="cornerSize">@dimen/radius_4dp</item>
     </style>
@@ -250,7 +251,7 @@
         <item name="shapeAppearance">@style/Theme.WarrantyRoster.AlertDialog.Appearance</item>
     </style>
 
-    <style name="Theme.WarrantyRoster.AlertDialog.Appearance">
+    <style name="Theme.WarrantyRoster.AlertDialog.Appearance" parent="ShapeAppearance.MaterialComponents">
         <item name="cornerFamily">rounded</item>
         <item name="cornerSize">@dimen/radius_12dp</item>
     </style>
@@ -288,6 +289,75 @@
     </style>
 
     <style name="Theme.WarrantyRoster.AlertDialog.NegativeButton" parent="Widget.MaterialComponents.Button.TextButton.Dialog">
+        <item name="shapeAppearance">@style/Theme.WarrantyRoster.TextButton.Appearance</item>
+        <item name="android:textColor">@color/dialogButton</item>
+        <item name="android:textSize">@dimen/text_size_14sp</item>
+        <item name="android:fontFamily">@font/nunito_bold</item>
+        <item name="textAllCaps">true</item>
+        <item name="android:ellipsize">end</item>
+        <item name="android:maxLines">1</item>
+        <item name="android:paddingTop">@dimen/padding_4dp</item>
+        <item name="android:paddingBottom">@dimen/padding_4dp</item>
+        <item name="android:paddingStart">@dimen/padding_8dp</item>
+        <item name="android:paddingEnd">@dimen/padding_8dp</item>
+    </style>
+
+    <style name="Theme.WarrantyRoster.DatePicker" parent="ThemeOverlay.MaterialComponents.MaterialCalendar">
+        <item name="materialCalendarStyle">@style/Theme.WarrantyRoster.DatePicker.CalendarStyle
+        </item>
+        <item name="materialCalendarHeaderTitle">@style/Theme.WarrantyRoster.DatePicker.Title</item>
+        <item name="materialCalendarHeaderSelection">
+            @style/Theme.WarrantyRoster.DatePicker.Selection
+        </item>
+        <item name="materialCalendarYearNavigationButton">
+            @style/Theme.WarrantyRoster.DatePicker.YearButton
+        </item>
+        <item name="buttonBarPositiveButtonStyle">
+            @style/Theme.WarrantyRoster.DatePicker.ConfirmButton
+        </item>
+        <item name="buttonBarNegativeButtonStyle">
+            @style/Theme.WarrantyRoster.DatePicker.CancelButton
+        </item>
+    </style>
+
+    <style name="Theme.WarrantyRoster.DatePicker.CalendarStyle" parent="Widget.MaterialComponents.MaterialCalendar">
+        <item name="shapeAppearance">@style/Theme.WarrantyRoster.DatePicker.Appearance</item>
+    </style>
+
+    <style name="Theme.WarrantyRoster.DatePicker.Appearance" parent="ShapeAppearance.MaterialComponents">
+        <item name="cornerFamily">rounded</item>
+        <item name="cornerSize">@dimen/radius_12dp</item>
+    </style>
+
+    <style name="Theme.WarrantyRoster.DatePicker.Title" parent="Widget.MaterialComponents.MaterialCalendar.HeaderTitle">
+        <item name="android:textAllCaps">false</item>
+        <item name="android:fontFamily">@font/nunito_bold</item>
+    </style>
+
+    <style name="Theme.WarrantyRoster.DatePicker.Selection" parent="Widget.MaterialComponents.MaterialCalendar.HeaderSelection">
+        <item name="android:fontFamily">@font/nunito_bold</item>
+    </style>
+
+    <style name="Theme.WarrantyRoster.DatePicker.YearButton" parent="Widget.MaterialComponents.MaterialCalendar.YearNavigationButton">
+        <item name="android:textAllCaps">false</item>
+        <item name="android:fontFamily">@font/nunito_bold</item>
+    </style>
+
+    <style name="Theme.WarrantyRoster.DatePicker.ConfirmButton" parent="Widget.MaterialComponents.Button.TextButton.Dialog">
+        <item name="shapeAppearance">@style/Theme.WarrantyRoster.TextButton.Appearance</item>
+        <item name="android:textColor">@color/dialogButton</item>
+        <item name="android:textSize">@dimen/text_size_14sp</item>
+        <item name="android:fontFamily">@font/nunito_bold</item>
+        <item name="textAllCaps">true</item>
+        <item name="android:ellipsize">end</item>
+        <item name="android:maxLines">1</item>
+        <item name="android:paddingTop">@dimen/padding_4dp</item>
+        <item name="android:paddingBottom">@dimen/padding_4dp</item>
+        <item name="android:paddingStart">@dimen/padding_8dp</item>
+        <item name="android:paddingEnd">@dimen/padding_8dp</item>
+    </style>
+
+    <style name="Theme.WarrantyRoster.DatePicker.CancelButton" parent="Widget.MaterialComponents.Button.TextButton.Dialog">
         <item name="shapeAppearance">@style/Theme.WarrantyRoster.TextButton.Appearance</item>
         <item name="android:textColor">@color/dialogButton</item>
         <item name="android:textSize">@dimen/text_size_14sp</item>
