--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -144,7 +144,7 @@
         <item name="backgroundTint">@color/red10</item>
         <item name="android:textColor">@color/red</item>
         <item name="android:textSize">@dimen/text_size_16sp</item>
-        <item name="android:fontFamily">@font/nunito_bold</item>
+        <item name="android:fontFamily">@font/localized_bold</item>
         <item name="textAllCaps">true</item>
         <item name="android:maxLines">1</item>
         <item name="android:ellipsize">end</item>
@@ -215,7 +215,7 @@
     </style>
 
     <style name="Theme.WarrantyRoster.Toolbar.Title" parent="Widget.MaterialComponents.TextView">
-        <item name="android:fontFamily">@font/nunito_extra_bold</item>
+        <item name="android:fontFamily">@font/localized_extra_bold</item>
         <item name="android:textSize">@dimen/text_size_20sp</item>
         <item name="android:textColor">@color/black</item>
     </style>
@@ -223,6 +223,11 @@
     <style name="Theme.WarrantyRoster.ImageViewShapeAppearance">
         <item name="cornerFamily">rounded</item>
         <item name="cornerSize">@dimen/radius_12dp</item>
+    </style>
+
+    <style name="Theme.WarrantyRoster.ImageViewShapeAppearance.Circle">
+        <item name="cornerFamily">rounded</item>
+        <item name="cornerSize">@dimen/radius_50percent</item>
     </style>
 
     <style name="Theme.WarrantyRoster.ImageViewShapeAppearance.Settings">
