Change All Fonts to Localized Fonts

--- a/app/src/main/res/layout-land/fragment_change_email.xml
+++ b/app/src/main/res/layout-land/fragment_change_email.xml
@@ -51,7 +51,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="@dimen/margin_52dp"
                 android:layout_marginTop="@dimen/margin_24dp"
-                android:fontFamily="@font/nunito_bold"
+                android:fontFamily="@font/localized_bold"
                 android:gravity="start|center_vertical"
                 android:labelFor="@+id/ti_layout_password"
                 android:maxLines="1"
@@ -79,7 +79,7 @@
                     android:id="@+id/ti_edit_password"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:fontFamily="@font/nunito_regular"
+                    android:fontFamily="@font/localized_regular"
                     android:gravity="center_vertical"
                     android:hint="@string/change_email_hint_password"
                     android:imeOptions="actionNext"
@@ -97,7 +97,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="@dimen/margin_52dp"
                 android:layout_marginTop="@dimen/margin_8dp"
-                android:fontFamily="@font/nunito_bold"
+                android:fontFamily="@font/localized_bold"
                 android:gravity="start|center_vertical"
                 android:labelFor="@+id/ti_layout_new_email"
                 android:maxLines="1"
@@ -124,7 +124,7 @@
                     android:id="@+id/ti_edit_new_email"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:fontFamily="@font/nunito_regular"
+                    android:fontFamily="@font/localized_regular"
                     android:gravity="center_vertical"
                     android:hint="@string/change_email_hint_new_email"
                     android:imeOptions="actionDone"
