--- a/app/src/main/res/layout-land/fragment_change_password.xml
+++ b/app/src/main/res/layout-land/fragment_change_password.xml
@@ -51,7 +51,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="@dimen/margin_52dp"
                 android:layout_marginTop="@dimen/margin_24dp"
-                android:fontFamily="@font/nunito_bold"
+                android:fontFamily="@font/localized_bold"
                 android:gravity="start|center_vertical"
                 android:labelFor="@+id/ti_layout_current_password"
                 android:maxLines="1"
@@ -79,7 +79,7 @@
                     android:id="@+id/ti_edit_current_password"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:fontFamily="@font/nunito_regular"
+                    android:fontFamily="@font/localized_regular"
                     android:gravity="center_vertical"
                     android:hint="@string/change_password_hint_current"
                     android:imeOptions="actionNext"
@@ -97,7 +97,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="@dimen/margin_52dp"
                 android:layout_marginTop="@dimen/margin_16dp"
-                android:fontFamily="@font/nunito_bold"
+                android:fontFamily="@font/localized_bold"
                 android:gravity="start|center_vertical"
                 android:labelFor="@+id/ti_layout_new_password"
                 android:maxLines="1"
@@ -125,7 +125,7 @@
                     android:id="@+id/ti_edit_new_password"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:fontFamily="@font/nunito_regular"
+                    android:fontFamily="@font/localized_regular"
                     android:gravity="center_vertical"
                     android:hint="@string/change_password_hint_new"
                     android:imeOptions="actionNext"
@@ -143,7 +143,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="@dimen/margin_52dp"
                 android:layout_marginTop="@dimen/margin_16dp"
-                android:fontFamily="@font/nunito_bold"
+                android:fontFamily="@font/localized_bold"
                 android:gravity="start|center_vertical"
                 android:labelFor="@+id/ti_layout_retype_password"
                 android:maxLines="1"
@@ -171,7 +171,7 @@
                     android:id="@+id/ti_edit_retype_password"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:fontFamily="@font/nunito_regular"
+                    android:fontFamily="@font/localized_regular"
                     android:gravity="center_vertical"
                     android:hint="@string/change_password_hint_retype"
                     android:imeOptions="actionDone"
