--- a/app/src/main/res/layout-land/fragment_forgot_pw_sent.xml
+++ b/app/src/main/res/layout-land/fragment_forgot_pw_sent.xml
@@ -21,7 +21,7 @@
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="@dimen/margin_44dp"
             android:layout_marginTop="@dimen/margin_20dp"
-            android:fontFamily="@font/nunito_extra_bold"
+            android:fontFamily="@font/localized_extra_bold"
             android:gravity="start|center_vertical"
             android:text="@string/forgot_pw_sent_text_description"
             android:textAlignment="gravity"
@@ -54,7 +54,7 @@
             android:layout_width="@dimen/width_0dp"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="@dimen/margin_4dp"
-            android:fontFamily="@font/nunito_semi_bold"
+            android:fontFamily="@font/localized_semi_bold"
             android:gravity="center"
             android:text="@string/forgot_pw_sent_text_resend"
             android:textAlignment="gravity"
@@ -98,7 +98,7 @@
             android:layout_width="@dimen/width_0dp"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="@dimen/margin_4dp"
-            android:fontFamily="@font/nunito_semi_bold"
+            android:fontFamily="@font/localized_semi_bold"
             android:gravity="center"
             android:text="@string/forgot_pw_sent_text_resent"
             android:textAlignment="gravity"
@@ -115,7 +115,7 @@
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="@dimen/margin_4dp"
             android:layout_marginTop="@dimen/margin_4dp"
-            android:fontFamily="@font/nunito_regular"
+            android:fontFamily="@font/localized_regular"
             android:gravity="center"
             android:maxLines="1"
             android:text="(01:58)"
