--- a/app/src/main/res/layout/ad_banner_list_tapsell.xml
+++ b/app/src/main/res/layout/ad_banner_list_tapsell.xml
@@ -33,7 +33,7 @@
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="@dimen/margin_12dp"
             android:ellipsize="end"
-            android:fontFamily="@font/nunito_bold"
+            android:fontFamily="@font/localized_bold"
             android:gravity="center_vertical|start"
             android:maxLines="1"
             android:text="Xeniac Dev"
@@ -55,7 +55,7 @@
             android:layout_marginHorizontal="@dimen/margin_12dp"
             android:layout_marginTop="@dimen/margin_12dp"
             android:ellipsize="end"
-            android:fontFamily="@font/nunito_regular"
+            android:fontFamily="@font/localized_regular"
             android:gravity="center_vertical|start"
             android:maxLines="1"
             android:text="We are a software production team"
@@ -76,7 +76,7 @@
             android:background="@drawable/shape_rounded_ad_indicator"
             android:backgroundTint="@color/blue20"
             android:ellipsize="end"
-            android:fontFamily="@font/nunito_black"
+            android:fontFamily="@font/localized_black"
             android:gravity="center"
             android:maxLines="1"
             android:paddingHorizontal="@dimen/padding_4dp"
