--- a/app/src/main/res/layout/fragment_add_warranty.xml
+++ b/app/src/main/res/layout/fragment_add_warranty.xml
@@ -63,7 +63,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginHorizontal="@dimen/margin_24dp"
                         android:layout_marginTop="@dimen/margin_16dp"
-                        android:fontFamily="@font/nunito_bold"
+                        android:fontFamily="@font/localized_bold"
                         android:gravity="center_vertical|start"
                         android:labelFor="@+id/ti_layout_title"
                         android:maxLines="1"
@@ -90,7 +90,7 @@
                             android:id="@+id/ti_edit_title"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:fontFamily="@font/nunito_regular"
+                            android:fontFamily="@font/localized_regular"
                             android:gravity="center_vertical"
                             android:hint="@string/add_warranty_hint_title"
                             android:imeOptions="actionDone"
@@ -107,7 +107,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginHorizontal="@dimen/margin_8dp"
                         android:layout_marginTop="@dimen/margin_16dp"
-                        android:fontFamily="@font/nunito_bold"
+                        android:fontFamily="@font/localized_bold"
                         android:gravity="center_vertical|start"
                         android:labelFor="@+id/ti_layout_date_starting"
                         android:maxLines="1"
@@ -137,7 +137,7 @@
                             android:id="@+id/ti_edit_date_starting"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:fontFamily="@font/nunito_regular"
+                            android:fontFamily="@font/localized_regular"
                             android:gravity="center_vertical"
                             android:hint="@string/add_warranty_hint_date"
                             android:imeOptions="actionNext"
@@ -154,7 +154,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginHorizontal="@dimen/margin_8dp"
                         android:layout_marginTop="@dimen/margin_16dp"
-                        android:fontFamily="@font/nunito_bold"
+                        android:fontFamily="@font/localized_bold"
                         android:gravity="center_vertical|start"
                         android:labelFor="@+id/ti_layout_date_expiry"
                         android:maxLines="1"
@@ -184,7 +184,7 @@
                             android:id="@+id/ti_edit_date_expiry"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:fontFamily="@font/nunito_regular"
+                            android:fontFamily="@font/localized_regular"
                             android:gravity="center_vertical"
                             android:hint="@string/add_warranty_hint_date"
                             android:imeOptions="actionNext"
@@ -201,7 +201,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginHorizontal="@dimen/margin_24dp"
                         android:layout_marginTop="@dimen/margin_4dp"
-                        android:fontFamily="@font/nunito_semi_bold"
+                        android:fontFamily="@font/localized_semi_bold"
                         android:gravity="center_vertical|start"
                         android:text="@string/add_warranty_error_date"
                         android:textAlignment="gravity"
@@ -217,7 +217,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="@dimen/margin_24dp"
-                        android:fontFamily="@font/nunito_extra_light"
+                        android:fontFamily="@font/localized_extra_light"
                         android:gravity="center_vertical|end"
                         android:text="@string/add_warranty_checkbox_lifetime"
                         android:textAlignment="gravity"
@@ -271,7 +271,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginHorizontal="@dimen/margin_24dp"
                         android:layout_marginTop="@dimen/margin_16dp"
-                        android:fontFamily="@font/nunito_bold"
+                        android:fontFamily="@font/localized_bold"
                         android:gravity="center_vertical|start"
                         android:labelFor="@+id/ti_layout_brand"
                         android:maxLines="1"
@@ -298,7 +298,7 @@
                             android:id="@+id/ti_edit_brand"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:fontFamily="@font/nunito_regular"
+                            android:fontFamily="@font/localized_regular"
                             android:gravity="center_vertical"
                             android:hint="@string/add_warranty_hint_brand"
                             android:imeOptions="actionNext"
@@ -315,7 +315,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginHorizontal="@dimen/margin_24dp"
                         android:layout_marginTop="@dimen/margin_16dp"
-                        android:fontFamily="@font/nunito_bold"
+                        android:fontFamily="@font/localized_bold"
                         android:gravity="center_vertical|start"
                         android:labelFor="@+id/ti_layout_model"
                         android:maxLines="1"
@@ -342,7 +342,7 @@
                             android:id="@+id/ti_edit_model"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:fontFamily="@font/nunito_regular"
+                            android:fontFamily="@font/localized_regular"
                             android:gravity="center_vertical"
                             android:hint="@string/add_warranty_hint_model"
                             android:imeOptions="actionNext"
@@ -359,7 +359,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginHorizontal="@dimen/margin_24dp"
                         android:layout_marginTop="@dimen/margin_16dp"
-                        android:fontFamily="@font/nunito_bold"
+                        android:fontFamily="@font/localized_bold"
                         android:gravity="center_vertical|start"
                         android:labelFor="@+id/ti_layout_serial"
                         android:maxLines="1"
@@ -388,7 +388,7 @@
                             android:id="@+id/ti_edit_serial"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:fontFamily="@font/nunito_regular"
+                            android:fontFamily="@font/localized_regular"
                             android:gravity="center_vertical"
                             android:hint="@string/add_warranty_hint_serial"
                             android:imeOptions="actionDone"
@@ -426,7 +426,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginHorizontal="@dimen/margin_24dp"
                         android:layout_marginTop="@dimen/margin_16dp"
-                        android:fontFamily="@font/nunito_bold"
+                        android:fontFamily="@font/localized_bold"
                         android:gravity="center_vertical|start"
                         android:labelFor="@+id/ti_layout_category"
                         android:maxLines="1"
@@ -453,7 +453,7 @@
                             android:id="@+id/ti_dd_category"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:fontFamily="@font/nunito_regular"
+                            android:fontFamily="@font/localized_regular"
                             android:gravity="center_vertical"
                             android:hint="@string/add_warranty_hint_category"
                             android:inputType="none"
@@ -496,7 +496,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginHorizontal="@dimen/margin_24dp"
                         android:layout_marginTop="@dimen/margin_16dp"
-                        android:fontFamily="@font/nunito_bold"
+                        android:fontFamily="@font/localized_bold"
                         android:gravity="center_vertical|start"
                         android:labelFor="@+id/ti_layout_description"
                         android:maxLines="1"
@@ -525,7 +525,7 @@
                             android:id="@+id/ti_edit_description"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:fontFamily="@font/nunito_regular"
+                            android:fontFamily="@font/localized_regular"
                             android:gravity="center_vertical"
                             android:hint="@string/add_warranty_hint_description"
                             android:imeOptions="actionDone"
