--- a/app/src/main/res/layout/fragment_warranty_details.xml
+++ b/app/src/main/res/layout/fragment_warranty_details.xml
@@ -81,7 +81,7 @@
                 android:background="@drawable/shape_rounded_status"
                 android:backgroundTint="@color/orange20"
                 android:ellipsize="end"
-                android:fontFamily="@font/nunito_black"
+                android:fontFamily="@font/localized_black"
                 android:gravity="center"
                 android:maxLines="1"
                 android:paddingHorizontal="@dimen/padding_8dp"
@@ -113,7 +113,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="@dimen/margin_4dp"
-                android:fontFamily="@font/nunito_regular"
+                android:fontFamily="@font/localized_regular"
                 android:gravity="center"
                 android:maxLines="1"
                 android:text="@string/warranty_details_title_date_starting"
@@ -131,7 +131,7 @@
                 android:layout_marginStart="@dimen/margin_4dp"
                 android:layout_marginEnd="@dimen/margin_20dp"
                 android:ellipsize="end"
-                android:fontFamily="@font/nunito_bold"
+                android:fontFamily="@font/localized_bold"
                 android:gravity="center_vertical|end"
                 android:maxLines="1"
                 android:text="02/22/2020"
@@ -158,7 +158,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="@dimen/margin_4dp"
-                android:fontFamily="@font/nunito_regular"
+                android:fontFamily="@font/localized_regular"
                 android:gravity="center"
                 android:maxLines="1"
                 android:text="@string/warranty_details_title_date_expiry"
@@ -176,7 +176,7 @@
                 android:layout_marginStart="@dimen/margin_4dp"
                 android:layout_marginEnd="@dimen/margin_20dp"
                 android:ellipsize="end"
-                android:fontFamily="@font/nunito_bold"
+                android:fontFamily="@font/localized_bold"
                 android:gravity="center_vertical|end"
                 android:maxLines="1"
                 android:text="02/22/2025"
@@ -205,7 +205,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="@dimen/margin_20dp"
                 android:layout_marginTop="@dimen/margin_16dp"
-                android:fontFamily="@font/nunito_extra_bold"
+                android:fontFamily="@font/localized_extra_bold"
                 android:gravity="center"
                 android:maxLines="1"
                 android:text="@string/warranty_details_title_device"
@@ -223,7 +223,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="@dimen/margin_20dp"
                 android:layout_marginTop="@dimen/margin_16dp"
-                android:fontFamily="@font/nunito_regular"
+                android:fontFamily="@font/localized_regular"
                 android:gravity="center"
                 android:maxLines="1"
                 android:text="@string/warranty_details_title_device_brand"
@@ -240,7 +240,7 @@
                 android:layout_marginStart="@dimen/margin_4dp"
                 android:layout_marginEnd="@dimen/margin_20dp"
                 android:ellipsize="end"
-                android:fontFamily="@font/nunito_bold"
+                android:fontFamily="@font/localized_bold"
                 android:gravity="center_vertical|end"
                 android:maxLines="1"
                 android:text="Samsung"
@@ -258,7 +258,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="@dimen/margin_20dp"
                 android:layout_marginTop="@dimen/margin_16dp"
-                android:fontFamily="@font/nunito_regular"
+                android:fontFamily="@font/localized_regular"
                 android:gravity="center"
                 android:maxLines="1"
                 android:text="@string/warranty_details_title_device_model"
@@ -275,7 +275,7 @@
                 android:layout_marginStart="@dimen/margin_4dp"
                 android:layout_marginEnd="@dimen/margin_20dp"
                 android:ellipsize="end"
-                android:fontFamily="@font/nunito_bold"
+                android:fontFamily="@font/localized_bold"
                 android:gravity="center_vertical|end"
                 android:maxLines="1"
                 android:text="WF-1000XM4"
@@ -293,7 +293,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="@dimen/margin_20dp"
                 android:layout_marginTop="@dimen/margin_16dp"
-                android:fontFamily="@font/nunito_regular"
+                android:fontFamily="@font/localized_regular"
                 android:gravity="center"
                 android:maxLines="1"
                 android:text="@string/warranty_details_title_device_serial"
@@ -310,7 +310,7 @@
                 android:layout_marginStart="@dimen/margin_4dp"
                 android:layout_marginEnd="@dimen/margin_20dp"
                 android:ellipsize="end"
-                android:fontFamily="@font/nunito_bold"
+                android:fontFamily="@font/localized_bold"
                 android:gravity="center_vertical|end"
                 android:maxLines="1"
                 android:text="38CXA1238CXA12"
@@ -339,7 +339,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="@dimen/margin_20dp"
                 android:layout_marginTop="@dimen/margin_16dp"
-                android:fontFamily="@font/nunito_extra_bold"
+                android:fontFamily="@font/localized_extra_bold"
                 android:gravity="center"
                 android:maxLines="1"
                 android:text="@string/warranty_details_title_description"
@@ -357,7 +357,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="@dimen/margin_20dp"
                 android:layout_marginTop="@dimen/margin_16dp"
-                android:fontFamily="@font/nunito_bold"
+                android:fontFamily="@font/localized_bold"
                 android:gravity="center_vertical|start"
                 android:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua."
                 android:textAlignment="gravity"
@@ -378,7 +378,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/margin_16dp"
-        android:fontFamily="@font/nunito_semi_bold"
+        android:fontFamily="@font/localized_semi_bold"
         android:text="@string/warranty_details_fab_edit"
         app:icon="@drawable/ic_fab_edit"
         app:iconGravity="start"
