--- a/app/src/main/res/layout/list_item_warranty.xml
+++ b/app/src/main/res/layout/list_item_warranty.xml
@@ -75,7 +75,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="@dimen/margin_12dp"
                 android:ellipsize="end"
-                android:fontFamily="@font/nunito_bold"
+                android:fontFamily="@font/localized_bold"
                 android:gravity="center_vertical|start"
                 android:maxLines="1"
                 android:text="@{title}"
@@ -95,7 +95,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="@dimen/margin_12dp"
                 android:layout_marginTop="@dimen/margin_12dp"
-                android:fontFamily="@font/nunito_regular"
+                android:fontFamily="@font/localized_regular"
                 android:gravity="center_vertical|start"
                 android:maxLines="1"
                 android:text="@{expiryDate}"
@@ -113,7 +113,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="@dimen/margin_2dp"
-                android:fontFamily="@font/nunito_black"
+                android:fontFamily="@font/localized_black"
                 android:gravity="center"
                 android:maxLines="1"
                 android:text="@{statusTitle}"
@@ -145,7 +145,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/margin_12dp"
                 android:layout_marginEnd="@dimen/margin_12dp"
-                android:fontFamily="@font/nunito_extra_light"
+                android:fontFamily="@font/localized_extra_light"
                 android:gravity="center_vertical|end"
                 android:maxLines="1"
                 android:text="@{categoryTitle}"
