--- a/app/src/main/res/drawable/ic_landing_header.xml
+++ b/app/src/main/res/drawable/ic_landing_header.xml
@@ -1,6 +1,7 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
     android:width="200dp"
     android:height="133.4066dp"
+    android:autoMirrored="true"
     android:viewportWidth="2730"
     android:viewportHeight="1821">
     <path
