--- a/app/src/main/res/drawable/ic_logo_xeniac.xml
+++ b/app/src/main/res/drawable/ic_logo_xeniac.xml
@@ -1,6 +1,7 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
     android:width="200dp"
     android:height="80dp"
+    android:autoMirrored="false"
     android:viewportWidth="500"
     android:viewportHeight="200">
     <path
