--- a/app/src/main/res/layout/ad_banner_settings_tapsell.xml
+++ b/app/src/main/res/layout/ad_banner_settings_tapsell.xml
@@ -33,7 +33,7 @@
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="@dimen/margin_12dp"
             android:ellipsize="end"
-            android:fontFamily="@font/nunito_semi_bold"
+            android:fontFamily="@font/localized_semi_bold"
             android:gravity="center_vertical|start"
             android:maxLines="1"
             android:text="Xeniac Dev"
@@ -55,7 +55,7 @@
             android:layout_marginHorizontal="12dp"
             android:layout_marginTop="@dimen/margin_4dp"
             android:ellipsize="end"
-            android:fontFamily="@font/nunito_regular"
+            android:fontFamily="@font/localized_regular"
             android:gravity="center_vertical|start"
             android:maxLines="1"
             android:text="We are a software production team"
@@ -77,7 +77,7 @@
             android:background="@drawable/shape_rounded_status"
             android:backgroundTint="@color/navyBlue20"
             android:ellipsize="end"
-            android:fontFamily="@font/nunito_black"
+            android:fontFamily="@font/localized_black"
             android:gravity="center"
             android:maxLines="1"
             android:paddingHorizontal="@dimen/padding_4dp"
