--- a/app/src/main/res/layout/fragment_change_email.xml
+++ b/app/src/main/res/layout/fragment_change_email.xml
@@ -49,7 +49,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="@dimen/margin_32dp"
                 android:layout_marginTop="@dimen/margin_8dp"
-                android:fontFamily="@font/nunito_bold"
+                android:fontFamily="@font/localized_bold"
                 android:gravity="start|center_vertical"
                 android:labelFor="@+id/ti_layout_password"
                 android:maxLines="1"
@@ -77,7 +77,7 @@
                     android:id="@+id/ti_edit_password"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:fontFamily="@font/nunito_regular"
+                    android:fontFamily="@font/localized_regular"
                     android:gravity="center_vertical"
                     android:hint="@string/change_email_hint_password"
                     android:imeOptions="actionNext"
@@ -95,7 +95,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="@dimen/margin_32dp"
                 android:layout_marginTop="@dimen/margin_8dp"
-                android:fontFamily="@font/nunito_bold"
+                android:fontFamily="@font/localized_bold"
                 android:gravity="start|center_vertical"
                 android:labelFor="@+id/ti_layout_new_email"
                 android:maxLines="1"
@@ -122,7 +122,7 @@
                     android:id="@+id/ti_edit_new_email"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:fontFamily="@font/nunito_regular"
+                    android:fontFamily="@font/localized_regular"
                     android:gravity="center_vertical"
                     android:hint="@string/change_email_hint_new_email"
                     android:imeOptions="actionDone"
