--- a/app/src/main/res/layout/fragment_change_password.xml
+++ b/app/src/main/res/layout/fragment_change_password.xml
@@ -49,7 +49,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="@dimen/margin_32dp"
                 android:layout_marginTop="@dimen/margin_8dp"
-                android:fontFamily="@font/nunito_bold"
+                android:fontFamily="@font/localized_bold"
                 android:gravity="start|center_vertical"
                 android:labelFor="@+id/ti_layout_current_password"
                 android:maxLines="1"
@@ -77,7 +77,7 @@
                     android:id="@+id/ti_edit_current_password"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:fontFamily="@font/nunito_regular"
+                    android:fontFamily="@font/localized_regular"
                     android:gravity="center_vertical"
                     android:hint="@string/change_password_hint_current"
                     android:imeOptions="actionNext"
@@ -95,7 +95,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="@dimen/margin_32dp"
                 android:layout_marginTop="@dimen/margin_16dp"
-                android:fontFamily="@font/nunito_bold"
+                android:fontFamily="@font/localized_bold"
                 android:gravity="start|center_vertical"
                 android:labelFor="@+id/ti_layout_new_password"
                 android:maxLines="1"
@@ -123,7 +123,7 @@
                     android:id="@+id/ti_edit_new_password"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:fontFamily="@font/nunito_regular"
+                    android:fontFamily="@font/localized_regular"
                     android:gravity="center_vertical"
                     android:hint="@string/change_password_hint_new"
                     android:imeOptions="actionNext"
@@ -141,7 +141,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="@dimen/margin_32dp"
                 android:layout_marginTop="@dimen/margin_16dp"
-                android:fontFamily="@font/nunito_bold"
+                android:fontFamily="@font/localized_bold"
                 android:gravity="start|center_vertical"
                 android:labelFor="@+id/ti_layout_retype_password"
                 android:maxLines="1"
@@ -169,7 +169,7 @@
                     android:id="@+id/ti_edit_retype_password"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:fontFamily="@font/nunito_regular"
+                    android:fontFamily="@font/localized_regular"
                     android:gravity="center_vertical"
                     android:hint="@string/change_password_hint_retype"
                     android:imeOptions="actionDone"
