--- a/app/src/main/res/layout/fragment_forgot_pw.xml
+++ b/app/src/main/res/layout/fragment_forgot_pw.xml
@@ -19,7 +19,7 @@
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="@dimen/margin_24dp"
             android:layout_marginTop="@dimen/margin_32dp"
-            android:fontFamily="@font/nunito_extra_bold"
+            android:fontFamily="@font/localized_extra_bold"
             android:gravity="start|center_vertical"
             android:text="@string/forgot_pw_text_description"
             android:textAlignment="gravity"
@@ -38,7 +38,7 @@
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="@dimen/margin_32dp"
             android:layout_marginTop="@dimen/margin_44dp"
-            android:fontFamily="@font/nunito_bold"
+            android:fontFamily="@font/localized_bold"
             android:gravity="start|center_vertical"
             android:labelFor="@+id/ti_layout_email"
             android:maxLines="1"
@@ -67,7 +67,7 @@
                 android:id="@+id/ti_edit_email"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:fontFamily="@font/nunito_regular"
+                android:fontFamily="@font/localized_regular"
                 android:gravity="center_vertical"
                 android:hint="@string/forgot_pw_hint_email"
                 android:imeOptions="actionDone"
