--- a/app/src/main/res/layout/fragment_forgot_pw_sent.xml
+++ b/app/src/main/res/layout/fragment_forgot_pw_sent.xml
@@ -22,7 +22,7 @@
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="@dimen/margin_24dp"
             android:layout_marginTop="@dimen/margin_32dp"
-            android:fontFamily="@font/nunito_extra_bold"
+            android:fontFamily="@font/localized_extra_bold"
             android:gravity="start|center_vertical"
             android:text="@string/forgot_pw_sent_text_description"
             android:textAlignment="gravity"
@@ -55,7 +55,7 @@
             android:layout_width="@dimen/width_0dp"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="@dimen/margin_4dp"
-            android:fontFamily="@font/nunito_semi_bold"
+            android:fontFamily="@font/localized_semi_bold"
             android:gravity="center"
             android:text="@string/forgot_pw_sent_text_resend"
             android:textAlignment="gravity"
@@ -99,7 +99,7 @@
             android:layout_width="@dimen/width_0dp"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="@dimen/margin_4dp"
-            android:fontFamily="@font/nunito_semi_bold"
+            android:fontFamily="@font/localized_semi_bold"
             android:gravity="center"
             android:text="@string/forgot_pw_sent_text_resent"
             android:textAlignment="gravity"
@@ -116,7 +116,7 @@
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="@dimen/margin_4dp"
             android:layout_marginTop="@dimen/margin_4dp"
-            android:fontFamily="@font/nunito_regular"
+            android:fontFamily="@font/localized_regular"
             android:gravity="center"
             android:maxLines="1"
             android:text="(01:58)"
