--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -19,7 +19,7 @@
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="@dimen/margin_24dp"
             android:layout_marginTop="@dimen/margin_32dp"
-            android:fontFamily="@font/nunito_extra_bold"
+            android:fontFamily="@font/localized_extra_bold"
             android:gravity="start|center_vertical"
             android:text="@string/login_text_description"
             android:textAlignment="gravity"
@@ -38,7 +38,7 @@
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="@dimen/margin_32dp"
             android:layout_marginTop="@dimen/margin_44dp"
-            android:fontFamily="@font/nunito_bold"
+            android:fontFamily="@font/localized_bold"
             android:gravity="start|center_vertical"
             android:labelFor="@+id/ti_layout_email"
             android:maxLines="1"
@@ -67,7 +67,7 @@
                 android:id="@+id/ti_edit_email"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:fontFamily="@font/nunito_regular"
+                android:fontFamily="@font/localized_regular"
                 android:gravity="center_vertical"
                 android:hint="@string/login_hint_email"
                 android:imeOptions="actionNext"
@@ -85,7 +85,7 @@
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="@dimen/margin_32dp"
             android:layout_marginTop="@dimen/margin_16dp"
-            android:fontFamily="@font/nunito_bold"
+            android:fontFamily="@font/localized_bold"
             android:gravity="start|center_vertical"
             android:labelFor="@+id/ti_layout_password"
             android:maxLines="1"
@@ -115,7 +115,7 @@
                 android:id="@+id/ti_edit_password"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:fontFamily="@font/nunito_regular"
+                android:fontFamily="@font/localized_regular"
                 android:gravity="center_vertical"
                 android:hint="@string/login_hint_password"
                 android:imeOptions="actionDone"
@@ -134,7 +134,7 @@
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="@dimen/margin_27dp"
             android:layout_marginTop="@dimen/margin_3dp"
-            android:fontFamily="@font/nunito_light"
+            android:fontFamily="@font/localized_light"
             android:gravity="center"
             android:text="@string/login_btn_forgot_pw"
             android:textAlignment="gravity"
@@ -173,7 +173,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/margin_4dp"
-            android:fontFamily="@font/nunito_regular"
+            android:fontFamily="@font/localized_regular"
             android:gravity="center"
             android:maxLines="1"
             android:text="@string/login_text_register_title"
