--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -37,7 +37,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="@dimen/margin_24dp"
                 android:layout_marginTop="@dimen/margin_24dp"
-                android:fontFamily="@font/nunito_extra_bold"
+                android:fontFamily="@font/localized_extra_bold"
                 android:gravity="center_vertical|start"
                 android:text="@string/settings_title_account"
                 android:textAlignment="gravity"
@@ -98,7 +98,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginHorizontal="@dimen/margin_12dp"
                         android:ellipsize="end"
-                        android:fontFamily="@font/nunito_semi_bold"
+                        android:fontFamily="@font/localized_semi_bold"
                         android:gravity="center_vertical|start"
                         android:maxLines="1"
                         android:text="email@example.com"
@@ -179,7 +179,7 @@
                             android:layout_height="wrap_content"
                             android:layout_marginHorizontal="@dimen/margin_12dp"
                             android:ellipsize="end"
-                            android:fontFamily="@font/nunito_semi_bold"
+                            android:fontFamily="@font/localized_semi_bold"
                             android:gravity="center_vertical|start"
                             android:maxLines="1"
                             android:text="@string/settings_text_account_change_email"
@@ -244,7 +244,7 @@
                             android:layout_height="wrap_content"
                             android:layout_marginHorizontal="@dimen/margin_12dp"
                             android:ellipsize="end"
-                            android:fontFamily="@font/nunito_semi_bold"
+                            android:fontFamily="@font/localized_semi_bold"
                             android:gravity="center_vertical|start"
                             android:maxLines="1"
                             android:text="@string/settings_text_account_change_password"
@@ -280,7 +280,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="@dimen/margin_24dp"
                 android:layout_marginTop="@dimen/margin_24dp"
-                android:fontFamily="@font/nunito_extra_bold"
+                android:fontFamily="@font/localized_extra_bold"
                 android:gravity="center_vertical|start"
                 android:text="@string/settings_title_settings"
                 android:textAlignment="gravity"
@@ -340,7 +340,7 @@
                             android:layout_height="wrap_content"
                             android:layout_marginHorizontal="@dimen/margin_12dp"
                             android:ellipsize="end"
-                            android:fontFamily="@font/nunito_semi_bold"
+                            android:fontFamily="@font/localized_semi_bold"
                             android:gravity="center_vertical|start"
                             android:maxLines="1"
                             android:text="@string/settings_text_settings_language"
@@ -359,7 +359,7 @@
                             android:layout_height="wrap_content"
                             android:layout_marginEnd="@dimen/margin_12dp"
                             android:ellipsize="end"
-                            android:fontFamily="@font/nunito_bold"
+                            android:fontFamily="@font/localized_bold"
                             android:gravity="center"
                             android:maxLines="1"
                             android:text="@string/settings_text_settings_language_persian"
@@ -413,7 +413,7 @@
                             android:layout_height="wrap_content"
                             android:layout_marginHorizontal="@dimen/margin_12dp"
                             android:ellipsize="end"
-                            android:fontFamily="@font/nunito_semi_bold"
+                            android:fontFamily="@font/localized_semi_bold"
                             android:gravity="center_vertical|start"
                             android:maxLines="1"
                             android:text="@string/settings_text_settings_theme"
@@ -432,7 +432,7 @@
                             android:layout_height="wrap_content"
                             android:layout_marginEnd="@dimen/margin_12dp"
                             android:ellipsize="end"
-                            android:fontFamily="@font/nunito_bold"
+                            android:fontFamily="@font/localized_bold"
                             android:gravity="center"
                             android:maxLines="1"
                             android:text="@string/settings_text_settings_theme_default"
@@ -486,7 +486,7 @@
                             android:layout_height="wrap_content"
                             android:layout_marginHorizontal="@dimen/margin_12dp"
                             android:ellipsize="end"
-                            android:fontFamily="@font/nunito_semi_bold"
+                            android:fontFamily="@font/localized_semi_bold"
                             android:gravity="center_vertical|start"
                             android:maxLines="1"
                             android:text="@string/settings_text_settings_donate"
@@ -552,7 +552,7 @@
                             android:layout_height="wrap_content"
                             android:layout_marginHorizontal="@dimen/margin_12dp"
                             android:ellipsize="end"
-                            android:fontFamily="@font/nunito_semi_bold"
+                            android:fontFamily="@font/localized_semi_bold"
                             android:gravity="center_vertical|start"
                             android:maxLines="1"
                             android:text="@string/settings_text_settings_privacy_policy"
