--- a/app/src/main/res/layout/fragment_warranties.xml
+++ b/app/src/main/res/layout/fragment_warranties.xml
@@ -49,7 +49,7 @@
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="@dimen/margin_28dp"
         android:layout_marginBottom="@dimen/margin_60dp"
-        android:fontFamily="@font/nunito_bold"
+        android:fontFamily="@font/localized_bold"
         android:gravity="center"
         android:text="@string/warranties_text_empty_list"
         android:textAlignment="gravity"
@@ -67,7 +67,7 @@
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="@dimen/margin_32dp"
         android:layout_marginTop="@dimen/margin_8dp"
-        android:fontFamily="@font/nunito_semi_bold"
+        android:fontFamily="@font/localized_semi_bold"
         android:gravity="center"
         android:text="@string/error_network_failure"
         android:textAlignment="gravity"
