--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -38,13 +38,13 @@
 
     <style name="Theme.WarrantyRoster.Snackbar.TextView" parent="Widget.MaterialComponents.Snackbar.TextView">
         <item name="android:textColor">@color/whiteConstant</item>
-        <item name="android:fontFamily">@font/nunito_semi_bold</item>
+        <item name="android:fontFamily">@font/localized_semi_bold</item>
         <item name="android:maxLines">10</item>
     </style>
 
     <style name="Theme.WarrantyRoster.Snackbar.ActionButton" parent="Widget.MaterialComponents.Button.TextButton.Snackbar">
         <item name="android:textColor">@color/white</item>
-        <item name="android:fontFamily">@font/nunito_bold</item>
+        <item name="android:fontFamily">@font/localized_bold</item>
     </style>
 
     <style name="Theme.WarrantyRoster.TextInputLayout" parent="Widget.MaterialComponents.TextInputLayout.OutlinedBox">
@@ -77,12 +77,12 @@
     </style>
 
     <style name="Theme.WarrantyRoster.TextInputLayout.Error" parent="Widget.MaterialComponents.TextView">
-        <item name="android:fontFamily">@font/nunito_semi_bold</item>
+        <item name="android:fontFamily">@font/localized_semi_bold</item>
         <item name="android:textSize">@dimen/text_size_12sp</item>
     </style>
 
     <style name="Theme.WarrantyRoster.TextInputLayout.Helper" parent="Widget.MaterialComponents.TextView">
-        <item name="android:fontFamily">@font/nunito_semi_bold</item>
+        <item name="android:fontFamily">@font/localized_semi_bold</item>
         <item name="android:textSize">@dimen/text_size_12sp</item>
     </style>
 
@@ -132,7 +132,7 @@
         <item name="shapeAppearance">@style/Theme.WarrantyRoster.Button.Appearance</item>
         <item name="android:textColor">@color/whiteConstant</item>
         <item name="android:textSize">@dimen/text_size_16sp</item>
-        <item name="android:fontFamily">@font/nunito_bold</item>
+        <item name="android:fontFamily">@font/localized_bold</item>
         <item name="textAllCaps">false</item>
         <item name="android:maxLines">1</item>
         <item name="android:ellipsize">end</item>
@@ -160,7 +160,7 @@
         <item name="shapeAppearance">@style/Theme.WarrantyRoster.TextButton.Appearance</item>
         <item name="android:textColor">@color/blue</item>
         <item name="android:textSize">@dimen/text_size_14sp</item>
-        <item name="android:fontFamily">@font/nunito_bold</item>
+        <item name="android:fontFamily">@font/localized_bold</item>
         <item name="textAllCaps">false</item>
         <item name="android:maxLines">1</item>
         <item name="android:ellipsize">end</item>
@@ -178,7 +178,7 @@
         <item name="backgroundTint">@color/blue20</item>
         <item name="android:textColor">@color/blue</item>
         <item name="android:textSize">10sp</item>
-        <item name="android:fontFamily">@font/nunito_black</item>
+        <item name="android:fontFamily">@font/localized_black</item>
         <item name="textAllCaps">true</item>
         <item name="android:letterSpacing">0</item>
         <item name="android:maxLines">1</item>
@@ -201,7 +201,7 @@
     </style>
 
     <style name="Theme.WarrantyRoster.BottomNavigationView.Text" parent="Widget.MaterialComponents.TextView">
-        <item name="android:fontFamily">@font/nunito_regular</item>
+        <item name="android:fontFamily">@font/localized_regular</item>
         <item name="android:textSize">@dimen/text_size_12sp</item>
     </style>
 
@@ -264,26 +264,26 @@
     <style name="Theme.WarrantyRoster.AlertDialog.Title" parent="MaterialAlertDialog.MaterialComponents.Title.Text">
         <item name="android:textColor">@color/navyBlue</item>
         <item name="android:textSize">@dimen/text_size_20sp</item>
-        <item name="android:fontFamily">@font/nunito_extra_bold</item>
+        <item name="android:fontFamily">@font/localized_extra_bold</item>
     </style>
 
     <style name="Theme.WarrantyRoster.AlertDialog.Body" parent="Widget.MaterialComponents.TextView">
         <item name="android:textColor">@color/black</item>
         <item name="android:textSize">@dimen/text_size_14sp</item>
-        <item name="android:fontFamily">@font/nunito_regular</item>
+        <item name="android:fontFamily">@font/localized_regular</item>
     </style>
 
     <style name="Theme.WarrantyRoster.AlertDialog.Choice" parent="Widget.MaterialComponents.CheckedTextView">
         <item name="android:textColor">@color/black</item>
         <item name="android:textSize">@dimen/text_size_14sp</item>
-        <item name="android:fontFamily">@font/nunito_regular</item>
+        <item name="android:fontFamily">@font/localized_regular</item>
     </style>
 
     <style name="Theme.WarrantyRoster.AlertDialog.PositiveButton" parent="Widget.MaterialComponents.Button.TextButton.Dialog">
         <item name="shapeAppearance">@style/Theme.WarrantyRoster.TextButton.Appearance</item>
         <item name="android:textColor">@color/dialogButton</item>
         <item name="android:textSize">@dimen/text_size_14sp</item>
-        <item name="android:fontFamily">@font/nunito_bold</item>
+        <item name="android:fontFamily">@font/localized_bold</item>
         <item name="textAllCaps">true</item>
         <item name="android:ellipsize">end</item>
         <item name="android:maxLines">1</item>
@@ -297,7 +297,7 @@
         <item name="shapeAppearance">@style/Theme.WarrantyRoster.TextButton.Appearance</item>
         <item name="android:textColor">@color/dialogButton</item>
         <item name="android:textSize">@dimen/text_size_14sp</item>
-        <item name="android:fontFamily">@font/nunito_bold</item>
+        <item name="android:fontFamily">@font/localized_bold</item>
         <item name="textAllCaps">true</item>
         <item name="android:ellipsize">end</item>
         <item name="android:maxLines">1</item>
@@ -336,23 +336,23 @@
 
     <style name="Theme.WarrantyRoster.DatePicker.Title" parent="Widget.MaterialComponents.MaterialCalendar.HeaderTitle">
         <item name="android:textAllCaps">false</item>
-        <item name="android:fontFamily">@font/nunito_bold</item>
+        <item name="android:fontFamily">@font/localized_bold</item>
     </style>
 
     <style name="Theme.WarrantyRoster.DatePicker.Selection" parent="Widget.MaterialComponents.MaterialCalendar.HeaderSelection">
-        <item name="android:fontFamily">@font/nunito_bold</item>
+        <item name="android:fontFamily">@font/localized_bold</item>
     </style>
 
     <style name="Theme.WarrantyRoster.DatePicker.YearButton" parent="Widget.MaterialComponents.MaterialCalendar.YearNavigationButton">
         <item name="android:textAllCaps">false</item>
-        <item name="android:fontFamily">@font/nunito_bold</item>
+        <item name="android:fontFamily">@font/localized_bold</item>
     </style>
 
     <style name="Theme.WarrantyRoster.DatePicker.ConfirmButton" parent="Widget.MaterialComponents.Button.TextButton.Dialog">
         <item name="shapeAppearance">@style/Theme.WarrantyRoster.TextButton.Appearance</item>
         <item name="android:textColor">@color/dialogButton</item>
         <item name="android:textSize">@dimen/text_size_14sp</item>
-        <item name="android:fontFamily">@font/nunito_bold</item>
+        <item name="android:fontFamily">@font/localized_bold</item>
         <item name="textAllCaps">true</item>
         <item name="android:ellipsize">end</item>
         <item name="android:maxLines">1</item>
@@ -366,7 +366,7 @@
         <item name="shapeAppearance">@style/Theme.WarrantyRoster.TextButton.Appearance</item>
         <item name="android:textColor">@color/dialogButton</item>
         <item name="android:textSize">@dimen/text_size_14sp</item>
-        <item name="android:fontFamily">@font/nunito_bold</item>
+        <item name="android:fontFamily">@font/localized_bold</item>
         <item name="textAllCaps">true</item>
         <item name="android:ellipsize">end</item>
         <item name="android:maxLines">1</item>
