--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="appIconBackground">#1C53F4</color>
+
+    <!--Dynamic Colors-->
     <color name="background">#FFFFFF</color>
     <color name="surface">#FFFFFF</color>
     <color name="statusBar">#FFFFFF</color>
@@ -8,22 +9,27 @@
     <color name="white">#FFFFFF</color>
     <color name="black">#000000</color>
     <color name="navyBlue">#00144F</color>
-    <color name="blue">#1C53F4</color>
     <color name="skyBlue">#DEF4FD</color>
     <color name="dialogButton">#1C53F4</color>
-    <color name="green">#00BD62</color>
-    <color name="red">#FF3442</color>
-    <color name="orange">#FF9100</color>
     <color name="grayLight">#F3F3F3</color>
     <color name="grayMedium">#E9E9E9</color>
     <color name="grayDark">#959595</color>
-    <color name="whiteConstant">#FFFFFF</color>
     <color name="navyBlue10">#1A00144F</color>
     <color name="navyBlue20">#3300144F</color>
+
+    <!--Static Colors-->
+    <color name="appIconBackground">#1C53F4</color>
+    <color name="whiteStatic">#FFFFFF</color>
+    <color name="skyBlueStatic">#DEF4FD</color>
+    <color name="blue">#1C53F4</color>
+    <color name="green">#00BD62</color>
+    <color name="red">#FF3442</color>
+    <color name="orange">#FF9100</color>
     <color name="green10">#1A00BD62</color>
     <color name="green20">#3300BD62</color>
     <color name="red10">#1AFF3442</color>
     <color name="blue20">#331C53F4</color>
     <color name="red20">#33FF3442</color>
     <color name="orange20">#33FF9100</color>
+
 </resources>
