--- a/app/src/main/res/layout/activity_landing.xml
+++ b/app/src/main/res/layout/activity_landing.xml
@@ -78,7 +78,7 @@
             android:gravity="start|center_vertical"
             android:text="@string/login_text_title"
             android:textAlignment="gravity"
-            android:textColor="@color/whiteConstant"
+            android:textColor="@color/whiteStatic"
             android:textSize="@dimen/text_size_34sp"
             app:layout_constraintBottom_toTopOf="@+id/fcv"
             app:layout_constraintEnd_toEndOf="parent"
