--- a/app/src/main/res/layout-land/fragment_change_email.xml
+++ b/app/src/main/res/layout-land/fragment_change_email.xml
@@ -33,7 +33,7 @@
         android:layout_height="@dimen/height_0dp"
         android:fillViewport="true"
         android:orientation="vertical"
-        android:overScrollMode="never"
+        android:overScrollMode="ifContentScrolls"
         android:scrollbars="none"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
